# ollama-honeypot

./: .gitignore  CMakeLists.txt
config/: honeypot.json
config/show_details/: llama3.1_8b.json  phi4_latest.json
include/honeypot/api/: delete.hpp  misc_handlers.hpp  model_handlers.hpp  show.hpp  tags.hpp  version.hpp
include/honeypot/state/: honeypot_state.hpp
include/honeypot/utils/: config.hpp  fake_data.hpp  logging.hpp
src/: CMakeLists.txt  main.cpp
src/api/: delete.cpp  misc_handlers.cpp  model_handlers.cpp  show.cpp  tags.cpp  version.cpp
src/state/: honeypot_state.cpp
src/utils/: config.cpp  fake_data.cpp  logging.cpp
